fix refinements/prepend bug

replaced method entry should be invalidated.
[Bug #17386]